# pypsa_validation_processing

./: .gitignore  README.md  pixi.toml  pyproject.toml  workflow.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: custom.md  new-variable-statistics.md
.github/workflows/: tests.yml
pypsa_validation_processing/: __init__.py  class_definitions.py  statistics_functions.py  utils.py  workflow.py
pypsa_validation_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypsa_validation_processing/configs/: config.default.yaml  mapping.default.yaml
resources/: README.md
sister_packages/: README.md
tests/: README.md  conftest.py  test_aggregation.py  test_format_timestamps.py  test_network_processor.py  test_statistics_functions.py  test_unit_conversion.py  test_utils.py  test_workflow.py
